--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.78.0"
+    "react-router-dom": "^6.26.2",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
